# phorge

./: .gitignore  Cargo.toml  README.md  environment.yml
src/: main.rs  ncbi.rs
src/cmd/: align.rs  clean.rs  concat.rs  convert.rs  coverage.rs  curate.rs  extract.rs  fetch.rs  filter.rs  getheaders.rs  mod.rs  query.rs  stats.rs
